- added place holder image - add page not found html

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         </div>
         <!-- Third recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="vegetarian/rasam.html" style="width:100%;background-color: #1b662c;" class="btn btn-success" role="button">
-              <h3>Rasam</h3>
+            <a href="vegetarian/tomato-rasam.html" style="width:100%;background-color: #1b662c;" class="btn btn-success" role="button">
+              <h3>Tomato Rasam</h3>
             </a>
         </div>
         <!-- Fourth recipe item -->
@@ -168,7 +168,7 @@
         </div>
         <!-- Sixth recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#" style="width:100%;"  class="btn btn-info" role="button"  style="width:100%">
+            <a href=page-not-ready.html style="width:100%;"  class="btn btn-info" role="button"  style="width:100%">
               <h3>Palak Paneer</h3>
             </a>
         </div>
@@ -180,16 +180,16 @@
         </div>
         <!-- Eight recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="vegetarian/tamrind-chilli.html"  style="width:100%;" class="btn btn-secondary" role="button"  style="width:100%">
-              <h3>Tamrind Chilli</h3>
+            <a href="vegetarian/tamrind-chilli-thokku.html"  style="width:100%;" class="btn btn-secondary" role="button"  style="width:100%">
+              <h3>Tamrind Chilli Thokku</h3>
             </a>
         </div>
 <!--        &lt;!&ndash; Ninth recipe item &ndash;&gt;-->
-<!--        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">-->
-<!--            <a href="recipe.html"  style="width:100%;"  class="btn btn-success" role="button"  style="width:100%">-->
-<!--              <h3>Barbecue Pork Ribs</h3>-->
-<!--            </a>-->
-<!--        </div>-->
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href="page-not-ready.html"  style="width:100%;"  class="btn btn-success" role="button"  style="width:100%">
+              <h3>Pepper Rasam</h3>
+            </a>
+        </div>
       </div>
     </div>
   </section>
@@ -246,7 +246,7 @@
       <div class="row">
         <!-- First recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#" style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+            <a href=page-not-ready.html style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
                 <h3>Banana Bread</h3>
             </a>
         </div>
@@ -281,7 +281,7 @@
       <div class="row">
         <!-- First recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href="#" style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+            <a href=page-not-ready.html style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
                 <h3>Mocha Cookie Crumble</h3>
             </a>
         </div>
