--- a/vegetarian/tamrind-chilli-thokku.html
+++ b/vegetarian/tamrind-chilli-thokku.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sweet Pongal | Cookbook</title>
+  <title>Tamrind Chilli Thokku | Mulaga Puli | Cookbook</title>
 
   <!-- Favicon
   ============ -->
@@ -52,7 +52,7 @@
       <div class="row">
         <!-- Title -->
         <div class="col-12">
-          <h2>Sweet Pongal</h2>
+          <h2>Tamrind Chilli Thokku | Mulaga Puli | Pickle </h2>
         </div>
       </div>
       <div class="row vertical-align">
@@ -71,7 +71,7 @@
                   <i class="fa fa-clock-o" aria-hidden="true"></i>
                 </div>
                 <div class="col-6">Time</div>
-                <div class="col-4">1:15 H</div>
+                <div class="col-4">0:45 H</div>
               </div>
               <!-- Difficulty -->
               <div class="row">
@@ -80,6 +80,7 @@
                 </div>
                 <div class="col-6">Difficulty</div>
                 <div class="col-4">
+                  <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star-half-o" aria-hidden="true"></i>
                 </div>
@@ -90,7 +91,7 @@
                   <i class="fa fa-users" aria-hidden="true"></i>
                 </div>
                 <div class="col-6">Servings</div>
-                <div class="col-4">8</div>
+                <div class="col-4">5</div>
               </div>
             </div>
           </div>
@@ -102,16 +103,19 @@
           <div class="recipe-ingredients">
             <h3>Ingredients</h3>
             <dl class="ingredients-list">
-              <dt style="background:#180a0a;color:#ffffff"><b>Step1</b></dt><dd style="background:#ffffff">&nbsp;</dd>
-              <dt>&frac34;</dt> <dd>cup rice</dd>
-              <dt>&frac14;</dt> <dd>moong dal split without skin</dd>
-              <dt>30</dt> <dd>minutes soak the rice and and moong dal in water and drain the water/dd>
-              <dt>2</dt> <dd>cups water</dd>
-              <dt>1</dt> <dd>cup milk</dd>
-              <dt style="background:#180a0a;color:#ffffff"><b>Step2</b></dt><dd style="background:#ffffff">&nbsp;</dd>
-              <dt>&frac12</dt> <dd>cup gud/jaggery</dd>
-              <dt>&frac12</dt> <dd>1/2 cardmon/elachi</dd>
-              <dt>&frac12</dt> <dd>1 tablespoon ghee</dd>
+              <dt>1</dt> <dd>cup tamrind</dd>
+              <dt>2</dt><dd>cup water</dd>
+              <dt>3</dt> <dd>cup of green chillies</dd>
+              <dt>&frac14;</dt> <dd>teaspoon Asafodeta</dd>
+              <dt>1&frac12;</dt><dd>teaspoon salt, may be more based on your taste</dd>
+              <dt>4</dt><dd>tablespoon sesame oil</dd>
+              <dt>1</dt><dd>tablespoon jaggery/gud</dd>
+              <dt>&frac58;</dt><dd>teaspoon turmeric</dd>
+              <dt>1</dt><dd>teaspoon methi/fenugreek seeds</dd>
+              <dt>1</dt><dd>teaspoon sesame seeds</dd>
+              <dt>&frac12;</dt><dd>mustard seeds</dd>
+              <dt>&frac12;</dt><dd>split urad dal</dd>
+              <dt>4</dt><dd>tablespoon sesame oil</dd>
             </dl>
           </div>
         </div>
@@ -122,16 +126,21 @@
           <div class="recipe-directions">
             <h3>Directions</h3>
             <ol>
-              <li>Add all the above ingredients under <b>Step1</b> into pressure cooker</li>
-              <li>Pressure cook on medium flame, 1 whistle and 7 minutes in lowest flame level</li>
-              <li>Wait for 10 minutes</li>
-              <li>open cooker</li>
-              <li>Add jagger to the wok, amount as mentioned in step2</li>
-              <li>Add 2 table spoon water, heat he wok and until the jaggery melts</li>
-              <li>Add cooked rice to the work and mix it well</li>
-              <li>Keeps stirring above for 5/10 minutes till its mixed will</li>
-              <li>Add 1 table spoon ghee</li>
-              <li>Crush cardamom 1 or 2 and add to wok and mix it well</li>
+              <ii>Splice the green chillies, such that they are still once piece</ii>
+              <li>Put mustard seed in sesame oil, once the mustard splits,
+                then put split urad dal. Enough oil to cook chilies like we cook onion
+                - no need to roast like onion
+              </li>
+              <li>Add sesame and methi to a pan and dry roast it, roast enough so you smell methi,
+                don't make it black. Let this cool down. Grind this into powder</li>
+              <li>Boil 2 cups water and add tamarind to it, once it cools down, squish the tamrind and strain the tamrind water</li>
+              <li>Add to the above strained tamrind water to vessel</li>
+              <li>Add turmeric, salt . Asofodeta and jaggery and cook well</li>
+              <li>Once the above liquid becomes viscous, add the cooked chilies and cook it well. </li>
+              <li>Now add the dry roasted and powdered methi and sesame, mix it well and cook for a minute</li>
+              <li>Put out the flame, check salt level</li>
+              <li>Cover the lid, keep it for 4 hours and transfer it to a glass botle.</li>
+              <li>You are ready to serve</li>
             </ol>
           </div>
         </div>
