--- a/vegetarian/tomato-rasam.html
+++ b/vegetarian/tomato-rasam.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sweet Pongal | Cookbook</title>
+  <title>Tomato Rasam | Cookbook</title>
 
   <!-- Favicon
   ============ -->
@@ -52,7 +52,7 @@
       <div class="row">
         <!-- Title -->
         <div class="col-12">
-          <h2>Sweet Pongal</h2>
+          <h2>Tomato Rasam</h2>
         </div>
       </div>
       <div class="row vertical-align">
@@ -71,7 +71,7 @@
                   <i class="fa fa-clock-o" aria-hidden="true"></i>
                 </div>
                 <div class="col-6">Time</div>
-                <div class="col-4">1:15 H</div>
+                <div class="col-4">0:45 H</div>
               </div>
               <!-- Difficulty -->
               <div class="row">
@@ -80,6 +80,7 @@
                 </div>
                 <div class="col-6">Difficulty</div>
                 <div class="col-4">
+                  <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star-half-o" aria-hidden="true"></i>
                 </div>
@@ -90,7 +91,7 @@
                   <i class="fa fa-users" aria-hidden="true"></i>
                 </div>
                 <div class="col-6">Servings</div>
-                <div class="col-4">8</div>
+                <div class="col-4">5</div>
               </div>
             </div>
           </div>
@@ -102,16 +103,17 @@
           <div class="recipe-ingredients">
             <h3>Ingredients</h3>
             <dl class="ingredients-list">
-              <dt style="background:#180a0a;color:#ffffff"><b>Step1</b></dt><dd style="background:#ffffff">&nbsp;</dd>
-              <dt>&frac34;</dt> <dd>cup rice</dd>
-              <dt>&frac14;</dt> <dd>moong dal split without skin</dd>
-              <dt>30</dt> <dd>minutes soak the rice and and moong dal in water and drain the water/dd>
-              <dt>2</dt> <dd>cups water</dd>
-              <dt>1</dt> <dd>cup milk</dd>
-              <dt style="background:#180a0a;color:#ffffff"><b>Step2</b></dt><dd style="background:#ffffff">&nbsp;</dd>
-              <dt>&frac12</dt> <dd>cup gud/jaggery</dd>
-              <dt>&frac12</dt> <dd>1/2 cardmon/elachi</dd>
-              <dt>&frac12</dt> <dd>1 tablespoon ghee</dd>
+              <dt>1</dt> <dd>lemon size tamrind in 2 cups of water</dd>
+              <dt>2</dt> <dd>teaspoon rasam powder</dd>
+              <dt>&frac14;</dt><dd>cup toor dal in 1 cup water</dd>
+              <dt>&frac14;</dt><dd>teaspoon turmeric powder.</dd>
+              <dt>1</dt><dd>teaspoon salt</dd>
+              <dt>&frac18;</dt><dd>teaspoon asafoedita/heeng</dd>
+              <dt>3</dt><dd>medium size tomato grind to puree in mixer</dd>
+              <dt>1</dt> <dd>tablespoon ghee</dd>
+              <dt>&frac12;</dt><dd>teaspoon mustard seeds</dd>
+              <dt>1</dt><dd>teaspoon jeera</dd>
+              <dt>4</dt><dd>coriander leaf stalk whole</dd>
             </dl>
           </div>
         </div>
@@ -122,16 +124,23 @@
           <div class="recipe-directions">
             <h3>Directions</h3>
             <ol>
-              <li>Add all the above ingredients under <b>Step1</b> into pressure cooker</li>
-              <li>Pressure cook on medium flame, 1 whistle and 7 minutes in lowest flame level</li>
+              <li>Add 1/4 cup toor dal to 1 cup water and pressure cook it at medium to high for until 2 whistles, keep low flame for
+                7 minutes. And open when the cooker cool down. The dal should have cooked vary well, mash it well
+                so it all watery</li>
+              <li>Boil 2 cups of water, add lemon size tamrind and set it aside, once it cools down,
+              squish the tamrind extract it and strain and throw the fiberous remainder</li>
+              <li>Pour the above filtered tamrind water to a vessel and keep it on medium flame</li>
+              <li>To the above vessel add turmeric, tomato puree, heeng, salt, heat on medium flame for
+              5-7 minutes</li>
+              <li>Add Rasam powder</li>
+              <li>Add watery dal we prepared in pressure cooker.</li>
+              <li>Heat till the bubbles are formed on the top</li>
+              <li>Get the seasoning work or karandi out, add ghee, let it heat up add mustard, when it starts
+              bursting, shut off the flame add jeera</li>
+              <li>Switch off the rasam pot/vessel. Add this seasoning the rasam</li>
+              <li>Top up with coriander and close the vessel with a lid</li>
               <li>Wait for 10 minutes</li>
-              <li>open cooker</li>
-              <li>Add jagger to the wok, amount as mentioned in step2</li>
-              <li>Add 2 table spoon water, heat he wok and until the jaggery melts</li>
-              <li>Add cooked rice to the work and mix it well</li>
-              <li>Keeps stirring above for 5/10 minutes till its mixed will</li>
-              <li>Add 1 table spoon ghee</li>
-              <li>Crush cardamom 1 or 2 and add to wok and mix it well</li>
+              <li>You are ready to serve</li>
             </ol>
           </div>
         </div>
