--- a/vegetarian/pongal.html
+++ b/vegetarian/pongal.html
@@ -58,9 +58,9 @@
       <div class="row vertical-align">
         <div class="col-12">
           <!-- Picture -->
-<!--          <div class="col-md-8 pull-left wow swing">-->
-<!--            <img src="../images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" class="recipe-picture" />-->
-<!--          </div>-->
+          <div class="col-md-8 pull-left wow swing">
+            <img src="../images/image-not-found.jpg" alt="image-not-available" class="recipe-picture" />
+          </div>
           <!-- Info -->
           <div class="col-md-4 pull-right wow lightSpeedIn">
             <div class="recipe-info">
