--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <!--          <div class="recipe-item text-center">-->
             <a href="vegetarian/pongal.html" style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
 <!--              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />-->
-              <h3>Ven Pongal</h3>
+              <h3>Fusion Kchidi/Pongal</h3>
             </a>
 <!--          </div>-->
         </div>
