--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   =================== -->
   <script charset="utf-8" type="text/javascript "src="js/modernizr.custom.js"></script>
 
+    <!-- Speech
+  =================== -->
+  <script charset="utf-8" type="text/javascript "src="js/speak.js"></script>
 </head>
 
 <body>
@@ -134,11 +137,11 @@
       </div>
       <div class="row">
         <!-- First recipe item -->
-        <div class=" col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+        <div class=" col-lg-4 col-md-6 col-sm-12 wow fadeIn" onmouseover="speak('Fusion of pongal and khichidi')">
 <!--          <div class="recipe-item text-center">-->
             <a href="vegetarian/pongal.html" style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
 <!--              <img src="images/bbq-pork-ribs.jpg" alt="bbq-pork-ribs" />-->
-              <h3>Fusion Kchidi/Pongal</h3>
+              <h3>Fusion Pongal</h3>
             </a>
 <!--          </div>-->
         </div>
