--- a/vegetarian/pongal.html
+++ b/vegetarian/pongal.html
@@ -52,7 +52,7 @@
       <div class="row">
         <!-- Title -->
         <div class="col-12">
-          <h2>Pongal</h2>
+          <h2>Fusion of Pongal and Khichidi.</h2>
         </div>
       </div>
       <div class="row vertical-align">
