moong dal update

--- a/vegetarian/moong-dal.html
+++ b/vegetarian/moong-dal.html
@@ -59,7 +59,8 @@
         <div class="col-12">
           <!-- Picture -->
           <div class="col-md-8 pull-left wow swing">
-            <img src="../images/image-not-found.jpg" alt="image-not-available" class="recipe-picture" />
+<!--            <img src="../images/image-not-found.jpg" alt="image-not-available" class="recipe-picture" />-->
+            <img src="../images/moong_dal.jpg" alt="image-not-available" class="recipe-picture" />
           </div>
           <!-- Info -->
           <div class="col-md-4 pull-right wow lightSpeedIn">
@@ -122,7 +123,7 @@
               <dt>&frac14;</dt> <dd>teaspoon garam masala</dd>
               <dt>&frac14;</dt> <dd>cup milk - optional</dd>
               <dt>2</dt> <dd>inch ginger, grate it</dd>
-              <dt>1</dt> <dd>big onion, grate it</dd>
+              <dt>1</dt> <dd>big onion, grate it or chop it small</dd>
               <dt>3</dt> <dd>medium sized tomatoes, puree/grind it</dd>
             </dl>
           </div>
