mocha cookie crumble

--- a/index.html
+++ b/index.html
@@ -284,8 +284,13 @@
       <div class="row">
         <!-- First recipe item -->
         <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
-            <a href=page-not-ready.html style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+            <a href='beverages/mocha-cookie-crumble.html' style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
                 <h3>Mocha Cookie Crumble</h3>
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 wow fadeIn">
+            <a href=page-not-ready.html style='width:100%;background-color:#1b5ea5' class="btn btn-primary" role="button">
+                <h3>Caramel Macchiato</h3>
             </a>
         </div>
 <!--        &lt;!&ndash; Second recipe item &ndash;&gt;-->
