--- a/tiffin/rava-dosai.html
+++ b/tiffin/rava-dosai.html
@@ -93,4 +93,4 @@
 <div class="wprm-nutrition-label-container wprm-nutrition-label-container-simple wprm-block-text-normal" style="text-align: left;">&nbsp;</div>
 <div class="wprm-nutrition-label-container wprm-nutrition-label-container-simple wprm-block-text-normal" style="text-align: left;">&nbsp;</div>
 </div>
-<strong>Reference</strong>:&nbsp;https://hebbarskitchen.com/crisp-instant-dosa-recipe/</div>
+<a href="https://hebbarskitchen.com/crisp-instant-dosa-recipe/" target="_blank" rel="noopener"><strong>Reference</strong></a></div>
