--- a/tiffin/thengai-dosai.html
+++ b/tiffin/thengai-dosai.html
@@ -114,4 +114,4 @@
 </ul>
 <!-- Ezoic - wp_incontent_8 - incontent_8 --><span id="ezoic-pub-ad-placeholder-125" data-inserter-version="2"></span><!-- End Ezoic - wp_incontent_8 - incontent_8 --></div>
 </div>
-<div><strong>Reference</strong>: https://www.jeyashriskitchen.com/thengai-dosa-coconut-dosa-recipe/</div>
+<div><a href="https://www.jeyashriskitchen.com/thengai-dosa-coconut-dosa-recipe/" target="_blank" rel="noopener"><strong>Reference</strong></a></div>
