--- a/tiffin/dal-dosai.html
+++ b/tiffin/dal-dosai.html
@@ -40,4 +40,6 @@
 </div>
 <h2>Important tips to make a crisp dosa</h2>
 <p>Never try to spread dosa on a very hot tawa, if you feel the skillet is too hot, just sprinkle some water on it and wipe with a kitchen cloth before spreading another one. Never spread the batter on a cold tawa, it will stick to it.Spread dosas on medium heat, then increase the heat while cooking.</p>
+<p><a href="https://carveyourcraving.com/healthy-mix-dal-masala-dosa-no-rice-added/" target="_blank" rel="noopener">Reference</a></p>
+<p>&nbsp;</p>
 </div>
